@@ -1,3 +1,9 @@
+2016-02-29  Ola Jeppsson  <ola@adapteva.com>
+
+	* e-hal/src/epiphany-hal.c (e_open): Comment out call to
+	ee_soft_reset_core().
+	(e_close): Likewise.
+
 2016-02-22  Ola Jeppsson  <ola@adapteva.com>
 
 	* e-hal/src/epiphany-hal.c (e_open): Call ee_soft_reset_core()
